Duplicate emails fixed and events can be written to database
